@@ -7,18 +7,37 @@ plugins {
 group = "org.sinytra.probe"
 version = "0.0.1"
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(21)
+
 application {
     mainClass = "io.ktor.server.netty.EngineMain"
 
     val isDevelopment: Boolean = project.ext.has("development")
-    applicationDefaultJvmArgs = listOf("-Dio.ktor.development=$isDevelopment")
+    applicationDefaultJvmArgs = mutableListOf(
+        "-Dio.ktor.development=$isDevelopment",
+        "-Dorg.sinytra.probe.storage_path=${file("run").absolutePath}",
+        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED"
+    )
 }
 
 repositories {
     mavenCentral()
 }
 
+evaluationDependsOn(":game")
+afterEvaluate {
+    val args = application.applicationDefaultJvmArgs as MutableList<String>
+    
+    val cleanPath = project(":game").ext["cleanPath"]!!
+    args += "-Dorg.sinytra.probe.clean.path=$cleanPath"
+
+    val classPath = project(":game").ext["transformClassPath"]!!
+    args += "-Dorg.sinytra.probe.transform.classpath=$classPath"
+}
+
 dependencies {
+    implementation(project(":transform", configuration = "localDev"))
+
     implementation(libs.ktor.server.core)
     implementation(libs.ktor.serialization.kotlinx.json)
     implementation(libs.ktor.server.content.negotiation)
@@ -33,6 +52,7 @@ dependencies {
     implementation(libs.ktor.client.cio)
     implementation(libs.ktor.client.content.negotiation)
     implementation(libs.ktor.client.logging)
+    implementation(libs.ktor.client.resources)
     testImplementation(libs.ktor.server.test.host)
     testImplementation(libs.kotlin.test.junit)
 }
